High idle CPU usage with PulseAudio in Linux #129162

Closed
opened 2024-10-17 15:10:22 +02:00 by usfreitas · 3 comments

System Information
Operating system: Linux-6.10.11+bpo-amd64-x86_64-with-glibc2.36 64 Bits, WAYLAND UI
Graphics card: AMD Radeon Graphics (gfx1103_r1, LLVM 15.0.6, DRM 3.57, 6.10.11+bpo-amd64) AMD 4.6 (Core Profile) Mesa 22.3.6

Blender Version
Broken: version: 4.3.0 Beta, branch: blender-v4.3-release, commit date: 2024-10-16 22:01, hash: 9222ce24f506
Worked: 4.2.3

Short description of error
Blender shows a very high CPU usage in idle state since starting. The pipewire-pulse process also shows high CPU usage.

Exact steps for others to reproduce the error
High CPU usage starts just after opening Blender from a fresh downloaded protable. No further actions are necessary.

Detailed information
Linux distribution: Debian 12.7, with backports 6.10 kernel.

The high CPU usage from Blender and from pipewire-pulse seem related. When other audio devices are chosen in Preferences->System->Sound, the CPU usage drops drastically.

Idle CPU usage with different audio devices in Blender:

Audio device Blender CPU usage pipewire-pulse CPU usage
PulseAudio 121% 54%
Open AL 4% 2%
Open AL Soft 4% 2%
JACK 2%
None 2%

This high CPU usage with pulseaudio is not present in Blender 4.2.3. However, in that version, a reduction in idle CPU usage is still observed when switching the audio device from pulseaudio to JACK, SDL or None (from 4% CPU usage to 2%).

I don't have another linux box to try, so I can't tell if it is a quirk from my setup.

**System Information** Operating system: Linux-6.10.11+bpo-amd64-x86_64-with-glibc2.36 64 Bits, WAYLAND UI Graphics card: AMD Radeon Graphics (gfx1103_r1, LLVM 15.0.6, DRM 3.57, 6.10.11+bpo-amd64) AMD 4.6 (Core Profile) Mesa 22.3.6 **Blender Version** Broken: version: 4.3.0 Beta, branch: blender-v4.3-release, commit date: 2024-10-16 22:01, hash: `9222ce24f506` Worked: 4.2.3 **Short description of error** Blender shows a very high CPU usage in idle state since starting. The `pipewire-pulse` process also shows high CPU usage. **Exact steps for others to reproduce the error** High CPU usage starts just after opening Blender from a fresh downloaded protable. No further actions are necessary. **Detailed information** Linux distribution: Debian 12.7, with backports 6.10 kernel. The high CPU usage from Blender and from pipewire-pulse seem related. When other audio devices are chosen in Preferences->System->Sound, the CPU usage drops drastically. Idle CPU usage with different audio devices in Blender: | Audio device | Blender CPU usage | pipewire-pulse CPU usage | | ---- | ----| ---- | | PulseAudio | 121% | 54% | | Open AL | 4% | 2% | | Open AL Soft | 4% | 2% | | JACK | 2% | | | None | 2% | | This high CPU usage with pulseaudio is not present in Blender 4.2.3. However, in that version, a reduction in idle CPU usage is still observed when switching the audio device from pulseaudio to JACK, SDL or None (from 4% CPU usage to 2%). I don't have another linux box to try, so I can't tell if it is a quirk from my setup.
usfreitas added the
Status
Needs Triage
Severity
Normal
Type
Bug
labels 2024-10-17 15:10:23 +02:00
Member

I can confirm the higher idle CPU usage here, with numbers almost exactly matching yours (I was using top to monitor CPU usage).

I will mark as high severity as it is a regression. And will look into bisecting.

System Information
Operating system: Linux-6.8.0-45-generic-x86_64-with-glibc2.39 64 Bits, WAYLAND UI
Graphics card: AMD Radeon RX 7800 XT (radeonsi, navi32, LLVM 18.1.7, DRM 3.57, 6.8.0-45-generic) AMD 4.6 (Core Profile) Mesa 24.2.0-devel

I can confirm the higher idle CPU usage here, with numbers almost exactly matching yours (I was using `top` to monitor CPU usage). I will mark as high severity as it is a regression. And will look into bisecting. **System Information** Operating system: Linux-6.8.0-45-generic-x86_64-with-glibc2.39 64 Bits, WAYLAND UI Graphics card: AMD Radeon RX 7800 XT (radeonsi, navi32, LLVM 18.1.7, DRM 3.57, 6.8.0-45-generic) AMD 4.6 (Core Profile) Mesa 24.2.0-devel
Member

Bisecting points to a235a18aca as the cause.

CC @neXyon and @ZedDB?

Bisecting points to a235a18aca50784e437dfdfc26b5e6a7dd575caf as the cause. CC @neXyon and @ZedDB?
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-10-21 00:54:02 +02:00
Member

@neXyon You seem to have commited the fix to main, but not the Blender 4.3 branch (which is also impacted).

Are you able to fix this by:

  • Creating a PR against 4.3 (Code changes for 4.3 in the later stages of development ideally should go through review)
  • Add relevant reviewers
  • Once reviewed and commited to 4.3, merge 4.3 into main and resolve the merge conflicts.
@neXyon You seem to have commited the fix to main, but not the Blender 4.3 branch (which is also impacted). Are you able to fix this by: - Creating a PR against 4.3 (Code changes for 4.3 in the later stages of development ideally should go through review) - Add relevant reviewers - Once reviewed and commited to 4.3, merge 4.3 into main and resolve the merge conflicts.
Alaska reopened this issue 2024-10-21 02:30:49 +02:00
Blender Bot added
Status
Confirmed
and removed
Status
Resolved
labels 2024-10-21 02:30:53 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-10-29 16:19:29 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#129162
No description provided.