Fix #129162: High idle CPU usage with PulseAudio in Linux

Prevents the unnecessary calls to CPU intensive pulseaudio functions while the stream is corked.

Pull Request: https://projects.blender.org/blender/blender/pulls/129312